# BattleShip

./: CMakeLists.txt  backend.cpp  backend.h  jsBackEnd.js  main.cpp  main.qml
